<resources>
    <string name="app_name">Practice 3.9 Base</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>

    <string name="gallery">Галерея</string>
    <string name="content_description_gallery">Изображения, сохраненные пользователем</string>
    <string name="search">Поиск</string>
    <string name="content_description_search">Поиск в приложении</string>
    <string name="more">Еще</string>
    <string name="content_description_more">Дополнительные возможности</string>
</resources>
